--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   padding: 20px;
   width: 500px;
   align-items: center;
+  background: linear-gradient(45deg, #15222e, #8100e0);
 }
 
 h3 {
@@ -22,7 +23,7 @@ h3:hover {
 
 div {
   background-color: #fff;
-  border-radius: 8px;
+  border-radius: 35px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   padding: 20px;
   margin-top: 20px;
